# randd-engineering-training

./: README.md
.github/: pull_request_template.md
.github/workflows/: ecr-image-update.yml  other.yml  test-api.yml  test-app.yml  test-batch.yml
2024/kubernetes_manifests/api/base/: deployment.yaml  kustomization.yaml  service.yaml
2024/kubernetes_manifests/api/overlays/development/: deployment.yaml  kustomization.yaml
2024/kubernetes_manifests/app/base/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
2024/kubernetes_manifests/app/overlays/development/: deployment.yaml  ingress.yaml  kustomization.yaml
2024/kubernetes_manifests/batch/base/: cronjob.yaml
2024/kubernetes_manifests/batch/overlays/development/: cronjob.yaml  kustomization.yaml
2024/kubernetes_manifests/other/base/: kustomization.yaml
2024/kubernetes_manifests/other/overlays/development/: configmap-bigquery.yaml  kustomization.yaml  service-account-api.yaml  service-account-batch.yaml
2024/python_training/api/: Dockerfile  pyproject.toml
2024/python_training/api/app/: config.py  container.py  guniconf.py  log.py  logging_and_timeout.py  main.py
2024/python_training/api/app/repositories/: __init__.py  batch_result_repository.py  business_card_repository.py
2024/python_training/api/app/routers/: cards.py  contacts.py  health.py
2024/python_training/api/app/schemas/: cards.py  contacts.py
2024/python_training/api/app/services/: __init__.py  batch_result_service.py  business_card_service.py
2024/python_training/api/data/: dummy_business_cards.csv  dummy_business_cards_exchange_history.csv  predicted_similar_persons_dummy.json
2024/python_training/api/tests/routers/: conftest.py  test_cards.py  test_contacts.py  test_health.py
2024/python_training/app/: Dockerfile  main.py  pyproject.toml  schemas.py
2024/python_training/app/.streamlit/: config.toml
2024/python_training/batch/: Dockerfile  main.py  pyproject.toml
2024/python_training/batch/conf/: logging.ini  param.ini
2024/python_training/batch/pipeline/tasks/: data_handler.py  data_loader.py  data_uploader.py  main_task.py
2024/python_training/batch/pipeline/utils/: node2vec.py  template.py
2024/python_training/batch/tests/pipeline/tasks/: test_data_handler.py
docs/: engineering.md  prototyping.md
kubernetes_manifests/api/base/: deployment.yaml  service.yaml
kubernetes_manifests/api/overlays/development/: deployment.yaml
kubernetes_manifests/app/base/: deployment.yaml  kustomization.yaml  service.yaml  target-group-binding.yaml
kubernetes_manifests/app/overlays/development/: deployment.yaml  kustomization.yaml  target-group-binding.yaml
kubernetes_manifests/batch/base/: cronjob.yaml  kustomization.yaml
kubernetes_manifests/batch/overlays/development/: cronjob.yaml  kustomization.yaml
kubernetes_manifests/other/overlays/development/: kustomization.yaml  security-group-policy.yaml  service-account-api.yaml  service-account-batch.yaml
python_training/: .dockerignore  .gitignore  README.md  compose.yml
python_training/api/: .env.example  Dockerfile  README.md  pyproject.toml
python_training/api/app/: config.py  container.py  gunicorn.conf.py  log.py  logging_context.py  main.py
python_training/api/app/data/: predicted_similar_persons_dummy.json
python_training/api/app/repositories/: __init__.py  batch_result_repository.py
python_training/api/app/routers/: health.py  person.py
python_training/api/app/schemas/: person.py
python_training/api/app/services/: __init__.py  batch_result_service.py
python_training/api/tests/: test_main.py
python_training/app/: .flake8  Dockerfile  README.md  main.py  pyproject.toml
python_training/app/.streamlit/: config.toml
python_training/batch/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
python_training/batch/conf/: param.ini
python_training/batch/pipeline/: __init__.py
python_training/batch/pipeline/tasks/: data_handler.py  data_loader.py  data_uploader.py  main_task.py
python_training/batch/tests/pipeline/tasks/: test_data_handler.py
samples/python_webapi/: .dockerignore  .flake8  .gitignore  Dockerfile  MANIFEST.in  README.md  guniconf.py  requirements.txt  setup.py
samples/python_webapi/src/randd_sample/: api.py  service.py
samples/python_webapi/src/randd_sample/model/: regression.py  trainer.py
samples/python_webapi/src/randd_sample/model/pkl/: sample.pkl
samples/python_webapi/src/randd_sample/schema/: validator.py
samples/python_webapi/src/randd_sample/schema/json/: sample_request-1.0.0.json
samples/python_webapi/tests/: test_api.py
test_code_training/: .flake8  .gitignore  pyproject.toml
test_code_training/src/pytest_examples/clients/: local_storage_client.py  protocol.py  storage_client.py
test_code_training/src/pytest_examples/extractors/: extractor.py
test_code_training/src/pytest_examples/models/: random_model.py
test_code_training/src/pytest_examples/preprocessors/: protocol.py  space_remover.py  text_normalizer.py
test_code_training/src/pytest_examples/schemas/: model_output.py
test_code_training/tests/clients/: conftest.py  test_local_storage_client.py  test_storage_client.py
test_code_training/tests/clients/dummy_documents/: 1.txt  33.txt  8.txt
test_code_training/tests/extractors/: test_extractor.py
test_code_training/tests/models/: test_random_model.py
test_code_training/tests/preprocessors/: test_space_remover.py  test_text_normalizer.py
