[tool.poetry]
name = "person-similarity-api"
version = "1.0.0"
description = "search person similarity api"
authors = ["Sansan, Inc."]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
pydantic = "^2.6.4"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
dependency-injector = "^4.41.0"
s3path = "^0.4.1"
s3fs = "^2023.3.0"
structlog = "^22.3.0"
asgi-correlation-id = "^4.1.0"
httpx = "^0.23.3"
pydantic-settings = "^2.2.1"
pandas = "^2.2.1"
pandera = "^0.18.3"
pandas-gbq = "^0.22.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.2"
ruff = "^0.3.4"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
check_untyped_defs = true
ignore_errors = false
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["ALL"]
ignore = [
    # missing-trailing-comma
    "COM812",
    # ambiguous-variable-name
    "E741",
    #  single-line-implicit-string-concatenation
    "ISC001",
    # assert
    "S101",
    # suspicious-non-cryptographic-random-usage
    "S311",
    # unnecessary-assign
    "RET504",
    # magic-value-comparison
    "PLR2004",
    # pydocstyle
    "D",
    # flake8-annotations
    "ANN",
]
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.ruff.extend-per-file-ignores]
"tests/*.py" = ["PT006","PT003"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.ruff.mccabe]
max-complexity = 5
